Fixes ZEN-1745 with an added screenshot about the grid feedback not showing in Chrome. reviewed by jhanson.
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@58920 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenUI3/browser/resources/sass/xtheme-zenoss.scss
+++ b/Products/ZenUI3/browser/resources/sass/xtheme-zenoss.scss
@@ -115,12 +115,9 @@ $include-missing-images: true;
     border:0 none;
 }
 .livegridinfopanel{
-    text-transform:uppercase;
-    font-size:10px !important;
-    &.#{$prefix}toolbar-text{
+        font-size:10px !important;
         color:#000 !important;
-        font-weight:bold;
-    }
+        font-weight:bold !important;
 }
 
 #evdetail_bd-body{
